src/objects/Plan_ServiceAssignment_mJO__c.object
<CustomObject>
    <description>NOTES Junction Object between Service Assignments and Short-term goals, Objectives and Interventions.</description>
    <fields>
        <fullName>Guardian1_Name__c</fullName>
        <formula>Short_term_Goal__r.Plan__r.Guardian1_Name__c</formula>
        <label>Guardian1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Phone_Number__c</fullName>
        <formula>Short_term_Goal__r.Plan__r.Guardian_Phone_Number__c</formula>
        <label>Guardian Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Intervention</label>
        <referenceTo>Intervention__c</referenceTo>
        <relationshipName>Service_Assignment_Relationship_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipName>Service_Assignment_Relationship_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <formula>Short_term_Goal__r.Plan__r.Person_Being_Served__c</formula>
        <label>Person Being Served</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Expiration_Date__c</fullName>
        <formula>Short_term_Goal__r.Plan__r.Plan_Expiration_Date__c</formula>
        <label>Plan Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <formula>text(Short_term_Goal__r.Plan__r.Status__c)</formula>
        <label>Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>Short_term_Goal__r.Plan__c</formula>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipName>Service_Assignment_Relationship_JOs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Short_term_Goal__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Short-term Goal</label>
        <referenceTo>Short_Term_Goal__c</referenceTo>
        <relationshipName>Service_Assignment_Relationship_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan ServiceAssignment mJO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Intervention__c</columns>
        <columns>Objective__c</columns>
        <columns>Short_term_Goal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SARJO-{00000000}</displayFormat>
        <label>Service Assignment Relationship JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan_ServiceAssignment_mJO</pluralLabel>
    <recordTypes>
        <fullName>SA_Intervention_JO</fullName>
        <active>true</active>
        <label>SA Intervention JO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SA_Objective_JO</fullName>
        <active>true</active>
        <label>SA-Objective JO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SA_Short_term_Goal_JO</fullName>
        <active>true</active>
        <label>SA-Short-term Goal JO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>